--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,7 @@ html, body {
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  font-size: 62.5%;
+  font: 400 62.5% Roboto, "Helvetica Neue", sans-serif !important;
   background: #fafafa;
 }
 
