--- a/src/app/timers/input-dialog/input-dialog.component.html
+++ b/src/app/timers/input-dialog/input-dialog.component.html
@@ -42,6 +42,8 @@
     <mat-dialog-actions>
         <button mat-button mat-dialog-close>Cancel</button>
         <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
-        <button mat-button [mat-dialog-close]="selectedNumber">Ok</button>
+        <button mat-button [mat-dialog-close]="selectedNumber" class="button-mini-2--dark" mat-raised-button
+                color="primary" type="submit">Ok
+        </button>
     </mat-dialog-actions>
 </section>
